[package]
name = "imageboard-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", features = ["jpeg", "png"] }
imageproc = {version="0.23"}
linkspace = {path ="../../../../crates/linkspace"}
tracing = "0.1.37"
